--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "fakesharper",
+	"name": "myfakesharper",
 	"publisher": "fakesharper",
-	"displayName": "fakesharper",
+	"displayName": "My fakesharper",
 	"description": "ReSharper features for Visual Studio Code",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"preview": false,
 	"icon": "assets/icon.png",
 	"repository": {
