--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,5 @@ indent_style = tab
 tab_width = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
+max_line_length = 150
+quote_type = single
